feat: Representative search by user's location

--- a/starter/app/src/main/res/layout/election_list_item.xml
+++ b/starter/app/src/main/res/layout/election_list_item.xml
@@ -15,19 +15,19 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:paddingBottom="@dimen/default_padding"
-        android:onClick="@{() -> clickListener.onClick(election)}"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:onClick="@{() -> clickListener.onClick(election)}"
+        android:paddingBottom="@dimen/default_padding">
 
         <!--Election Title-->
         <TextView
             android:id="@+id/electionTitle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:text="@{election.name}"
             android:textSize="18sp"
             android:textStyle="bold"
-            android:text="@{election.name}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -38,8 +38,8 @@
             android:id="@+id/electionDate"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textSize="14sp"
             android:text="@{election.electionDay.toString()}"
+            android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/electionTitle"
