--- a/starter/app/src/main/res/layout/fragment_representative.xml
+++ b/starter/app/src/main/res/layout/fragment_representative.xml
@@ -5,6 +5,7 @@
 
     <!-- Add data binding node -->
     <data>
+
         <variable
             name="viewModel"
             type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel" />
@@ -12,11 +13,11 @@
 
     <!-- TODO: Add motion scene to hide form on vertical scroll. -->
     <androidx.constraintlayout.motion.widget.MotionLayout
-        android:paddingTop="@dimen/default_padding"
-        android:paddingStart="@dimen/default_padding"
-        android:paddingEnd="@dimen/default_padding"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:paddingStart="@dimen/default_padding"
+        android:paddingTop="@dimen/default_padding"
+        android:paddingEnd="@dimen/default_padding"
         app:layoutDescription="@xml/fragment_representative_scene">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -26,10 +27,10 @@
             <!-- Add visual styling and content -->
             <TextView
                 android:id="@+id/search_title"
-                android:text="@string/representative_search"
+                style="@style/HeaderStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                style="@style/HeaderStyle"
+                android:text="@string/representative_search"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -40,9 +41,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:autofillHints=""
-                android:text="@={viewModel.address.line1}"
                 android:hint="@string/address_line_1"
                 android:inputType="textPostalAddress"
+                android:text="@={viewModel.address.line1}"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/search_title" />
 
@@ -54,8 +55,8 @@
                 android:layout_height="0dp"
                 android:autofillHints=""
                 android:hint="@string/address_line_2"
-                android:text="@={viewModel.address.line2}"
                 android:inputType="textPostalAddress"
+                android:text="@={viewModel.address.line2}"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/address_line_1" />
 
@@ -67,8 +68,8 @@
                 android:layout_height="wrap_content"
                 android:autofillHints=""
                 android:hint="@string/city"
-                android:text="@={viewModel.address.city}"
                 android:inputType="textPostalAddress"
+                android:text="@={viewModel.address.city}"
                 app:layout_constraintEnd_toStartOf="@id/stateSpinner"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/address_line_2" />
@@ -82,11 +83,11 @@
                 android:layout_height="0dp"
                 android:autofillHints=""
                 android:entries="@array/states"
-                app:stateValue="@{viewModel.selectedState}"
                 app:layout_constraintBottom_toBottomOf="@id/city"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/city"
-                app:layout_constraintTop_toTopOf="@id/city" />
+                app:layout_constraintTop_toTopOf="@id/city"
+                app:stateValue="@{viewModel.selectedState}" />
 
             <!-- TODO: Add data binding value -->
             <!-- TODO: Add visual styling and content -->
@@ -96,9 +97,9 @@
                 android:layout_height="wrap_content"
                 android:autofillHints=""
                 android:hint="@string/zip"
-                android:text="@={viewModel.address.zip}"
                 android:inputType="number"
                 android:maxLength="5"
+                android:text="@={viewModel.address.zip}"
                 app:layout_constraintEnd_toEndOf="@id/city"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/city" />
@@ -127,13 +128,13 @@
         <!-- Add visual styling and content -->
         <TextView
             android:id="@+id/representative_title"
+            style="@style/HeaderStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/common_padding"
             android:text="@string/my_representatives"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/formContainer"
-            style="@style/HeaderStyle" />
+            app:layout_constraintTop_toBottomOf="@id/formContainer" />
 
         <!-- Add Representatives RecyclerView -->
         <androidx.recyclerview.widget.RecyclerView
