--- a/starter/app/src/main/res/layout/social_media_band.xml
+++ b/starter/app/src/main/res/layout/social_media_band.xml
@@ -1,46 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_height="wrap_content">
 
     <!--Web site icon-->
     <ImageView
         android:id="@+id/webSiteIcon"
         android:layout_width="32dp"
         android:layout_height="32dp"
-        android:visibility="gone"
-        tools:visibility="visible"
         android:contentDescription="@string/web_site_icon"
         android:src="@drawable/ic_www"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible" />
 
     <!-- Facebook icon -->
     <ImageView
         android:id="@+id/facebookIcon"
         android:layout_width="32dp"
         android:layout_height="32dp"
-        android:visibility="gone"
-        tools:visibility="visible"
         android:layout_marginStart="@dimen/default_padding"
         android:contentDescription="@string/facebook_icon"
         android:src="@drawable/ic_facebook"
+        android:visibility="gone"
         app:layout_constraintStart_toEndOf="@id/webSiteIcon"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible" />
 
     <!-- Twitter icon -->
     <ImageView
         android:id="@+id/twitterIcon"
         android:layout_width="32dp"
         android:layout_height="32dp"
-        android:visibility="gone"
-        tools:visibility="visible"
         android:layout_marginStart="@dimen/default_padding"
         android:contentDescription="@string/twitter_icon"
         android:src="@drawable/ic_twitter"
+        android:visibility="gone"
         app:layout_constraintStart_toEndOf="@id/facebookIcon"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
